added comment functionality and list of comments under post

--- a/my-lens-app/styles/globals.css
+++ b/my-lens-app/styles/globals.css
@@ -5,3 +5,6 @@
 .bodyLandingPage {
   background-image: url("../src/bg12.jpg");
 }
+[contentEditable="true"]:empty:not(:focus):before {
+  content: attr(data-text);
+}
